# PhrasingModuleMM

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  plugin-mm.json  plugin.json
metamodule-plugins/: PhrasingModuleMM.mmplugin
src/: Phrasing.cpp  plugin.cpp  plugin.hpp
